Fix tab spacing

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
 
 
 .right-column{
-	dislpay: grid;
+	display: grid;
 	grid-template-rows: repeat(4.1fr);
 }
 
